samples/_failures_safe/1761647466_909771_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53f5fd93.c: In function ‘lexer_scan_string’:
./samples/SAFE/__tmp_53f5fd93.c:144:5: error: ‘lex’ undeclared (first use in this function); did you mean ‘lexer’?
  144 |     lex
      |     ^~~
      |     lexer
./samples/SAFE/__tmp_53f5fd93.c:144:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_53f5fd93.c:144:8: error: expected ‘;’ at end of input
  144 |     lex
      |        ^
      |        ;
./samples/SAFE/__tmp_53f5fd93.c:144:5: error: expected declaration or statement at end of input
  144 |     lex
      |     ^~~
